force-app/main/default/objects/New_Training__c/New_Training__c.object-meta.xml
<CustomObject>
    <label>New Training</label>
    <nameField>
        <label>New Training Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>New Trainings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>