force-app/main/default/objects/New_Training__c/fields/Number_of_Trainee__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Trainee__c</fullName>
    <label>Number of Trainee</label>
    <summaryForeignKey>Trainee_Participate__c.Training_Name__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>