force-app/main/default/objects/New_Training__c/fields/Trainer_Name__c.field-meta.xml
<CustomField>
    <fullName>Trainer_Name__c</fullName>
    <label>Trainer Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>