force-app/main/default/objects/New_Training__c/fields/Training__c.field-meta.xml
<CustomField>
    <fullName>Training__c</fullName>
    <label>Training</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Training</valueSetName>
    </valueSet>
</CustomField>