force-app/main/default/objects/New_Training__c/fields/Training_Mode__c.field-meta.xml
<CustomField>
    <fullName>Training_Mode__c</fullName>
    <label>Training Mode</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Offline</fullName>
            </value>
            <value>
                <fullName>Virtual</fullName>
            </value>
            <value>
                <fullName>Both</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>